      (backported from 3.0.3)
  b - If the resources nodes or procs are not submitted on the qsub command line then
      the nodes attribute does not get set. This causes a problem if procct is set on
      queues because there is no proc count available to evaluate. This fix sets
      a default nodes value of 1 if the nodes or procs resources are not requested.

2.5.7
  e - Added new qsub argument -F. This argument takes a quoted string as
      an argument. The string is a list of space separated commandline
      arguments which are available to the job script.
  e - Added an option to asynchronously delete jobs (currently cannot work 
      for qdel -a all due to limitations of single threads) backported from 3.0.2
  c - Fix an issue where job_purge didn't protect key variables that resulted in crashes
  b - fix bugzilla #134, qmgr -= was deleting all entries (backported from 3.0.2)
  b - do not prepend ${HOME} with the current dir for -o and -e in qsub (backported from 3.0.2)
  b - fix jobs named with -J not always having the server name appended correctly 
      (backported from 3.0.2)
  b - make it so that jobs named like arrays via -J have legal output and error file names
      (backported from 3.0.2)
  b - Fixed a bug for high availability. The -l listener option for pbs_server was not
      complete and did not allow pbs_server to properly communicate with the scheduler.
      Also fixed a bug with job dependencies where the second server or later in the
      $TORQUE_HOME/server_name directory was not added as part of the job dependecny
      so dependent jobs would get stuck on hold if the current server was not the first 
      server in the server_name file.
  b - Fixed a potential buffer overflow problem in src/resmom/checkpoint.c function
      mom_checkpoint_recover. I modified the code to change strcpy and strcat to strncpy
      and strncpy.

2.5.6
  b - Made changes to record_jobinfo and supporting functions to be